# deutsch-jozsa-algo

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
deutsch_jozsa/: __init__.py  classifier.py  complexity.py  logistic.py  qkd.py  quantum_dj.py
docs/: MATHEMATICS.md
examples/: demo_classification.py  demo_qkd.py  demo_quantum_dj.py  run_all.py
tests/: test_classifier.py  test_complexity.py  test_logistic.py  test_qkd.py  test_quantum_dj.py
